--- a/spotify_v2.ipynb
+++ b/spotify_v2.ipynb
@@ -2,8 +2,109 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "5074cbcb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-10-24 23:15:34.653 WARNING streamlit.runtime.caching.cache_data_api: No runtime found, using MemoryCacheStorageManager\n",
+      "2025-10-24 23:15:34.654 WARNING streamlit.runtime.caching.cache_data_api: No runtime found, using MemoryCacheStorageManager\n",
+      "2025-10-24 23:15:34.674 WARNING streamlit.runtime.scriptrunner_utils.script_run_context: Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-10-24 23:15:34.714 \n",
+      "  \u001b[33m\u001b[1mWarning:\u001b[0m to view this Streamlit app on a browser, run it with the following\n",
+      "  command:\n",
+      "\n",
+      "    streamlit run /Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages/ipykernel_launcher.py [ARGUMENTS]\n",
+      "2025-10-24 23:15:34.715 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-10-24 23:15:34.715 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "DeltaGenerator()"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# === Dataset source: merged CSV (Jupyter & Streamlit compatible) ===\n",
+    "import altair as alt\n",
+    "import re\n",
+    "from pathlib import Path\n",
+    "import pandas as pd, numpy as np\n",
+    "import streamlit as st\n",
+    "\n",
+    "# 1) BASE 경로: .py 파일이면 __file__, 노트북이면 CWD 사용\n",
+    "try:\n",
+    "    BASE = Path(__file__).parent\n",
+    "except NameError:\n",
+    "    BASE = Path.cwd()\n",
+    "\n",
+    "# 2) 후보 경로에서 CSV 검색 (존재하는 첫 파일 사용)\n",
+    "CANDIDATES = [\n",
+    "    BASE / \"spotify_merged.csv\",                          # 권장: 루트에 두기\n",
+    "    BASE / \"data\" / \"raw\" / \"spotify_merged.csv\",\n",
+    "    BASE / \"spotify_cleaned_final_v2.csv\",                # 백업: 정제 CSV (있다면)\n",
+    "    BASE / \"data\" / \"raw\" / \"spotify_cleaned_final_v2.csv\",\n",
+    "]\n",
+    "CSV_PATH = next((p for p in CANDIDATES if p.exists()), None)\n",
+    "if CSV_PATH is None:\n",
+    "    st.error(\"❌ merged CSV를 찾지 못했습니다. `spotify_merged.csv`를 프로젝트 루트(또는 data/raw)에 두세요.\")\n",
+    "    st.stop()\n",
+    "\n",
+    "@st.cache_data(show_spinner=False)\n",
+    "def load_merged_csv(path: Path):\n",
+    "    \"\"\"원본+매출지표 병합 CSV 로더\n",
+    "    - df_raw: 원본 그대로 (KPI/프리뷰/결측치 표시에 사용)\n",
+    "    - df: 차트용 작업본 (원본 열수에 영향 없이 파생만 추가)\n",
+    "    \"\"\"\n",
+    "    df_raw = pd.read_csv(path)\n",
+    "\n",
+    "    # 작업본 복사\n",
+    "    dfx = df_raw.copy()\n",
+    "\n",
+    "    # revenue_num: 문자→숫자 (₩, 콤마 제거)\n",
+    "    if \"revenue\" in dfx.columns:\n",
+    "        def to_number(x):\n",
+    "            if pd.isna(x): return np.nan\n",
+    "            s = re.sub(r\"[^0-9.\\-]\", \"\", str(x))\n",
+    "            return float(s) if s else np.nan\n",
+    "        dfx[\"revenue_num\"] = dfx[\"revenue\"].map(to_number)\n",
+    "\n",
+    "    # 요금제 표준화 컬럼\n",
+    "    plan_col = next((c for c in [\"subscription_plan\",\"spotify_subscription_plan\",\"subscription_plan_norm\"]\n",
+    "                     if c in dfx.columns), None)\n",
+    "    if plan_col and \"subscription_plan_norm\" not in dfx.columns:\n",
+    "        dfx[\"subscription_plan_norm\"] = dfx[plan_col].astype(str)\n",
+    "\n",
+    "    # month 문자열화(Altair 정렬 일관성)\n",
+    "    if \"month\" in dfx.columns:\n",
+    "        dfx[\"month\"] = dfx[\"month\"].astype(str)\n",
+    "\n",
+    "    return df_raw, dfx\n",
+    "\n",
+    "# 3) 실제 로드 (여기서 반드시 df_raw/df를 생성해야 아래에서 사용 가능)\n",
+    "try:\n",
+    "    df_raw, df = load_merged_csv(CSV_PATH)\n",
+    "except Exception as e:\n",
+    "    st.error(f\"데이터 로드 실패: {e}\")\n",
+    "    st.stop()\n",
+    "\n",
+    "# 4) 디버깅/확인용 캡션 (원하면 지워도 됨)\n",
+    "st.caption(f\"✅ CSV 로드: {CSV_PATH.name} — {len(df_raw):,}행 × {len(df_raw.columns)}열 (원본 기준)\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "654b58e1",
    "metadata": {},
    "outputs": [
     {
@@ -243,38 +344,22 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from pathlib import Path\n",
-    "import pandas as pd, numpy as np, re, json, matplotlib.pyplot as plt\n",
-    "\n",
-    "# 📂 경로 설정 (현재 구조 기준)\n",
-    "BASE = Path.cwd().parent if Path.cwd().name == \"notebooks\" else Path.cwd()\n",
-    "RAW_FILE = BASE / \"spotify_cleaned_final_v2.csv\"    # 루트 파일 그대로 사용\n",
-    "\n",
-    "PROC = BASE / \"data\" / \"processed\"\n",
-    "ART  = BASE / \"artifacts\"\n",
-    "ART_FIG = ART / \"figures\"\n",
-    "ART_MET = ART / \"metrics\"\n",
-    "\n",
-    "for p in [PROC, ART_FIG, ART_MET]:\n",
-    "    p.mkdir(parents=True, exist_ok=True)\n",
-    "\n",
     "# ✅ 데이터 불러오기\n",
     "df = pd.read_csv(RAW_FILE)\n",
     "rows, cols = df.shape\n",
     "print(f\"불러온 데이터: {rows}행 × {cols}열\")\n",
-    "df.head()\n",
-    "\n"
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "fbfc718b",
    "metadata": {},
    "outputs": [
@@ -342,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "d4f30b70",
    "metadata": {},
    "outputs": [],
@@ -377,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "481084ab",
    "metadata": {},
    "outputs": [
@@ -392,16 +477,77 @@
    "source": [
     "out_path = PROC / \"spotify_processed.parquet\"\n",
     "df.to_parquet(out_path, index=False)\n",
-    "print(\"저장 완료:\", out_path)\n"
+    "print(\"저장 완료:\", out_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "c90bd09c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'st' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[13]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# ---- AARRR helper: 이전/현재 플랜, 코호트, 월별 사용자 수/매출 ----\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;129m@st\u001b[39m.cache_data(show_spinner=\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mbuild_aarr_data\u001b[39m(df: pd.DataFrame):\n\u001b[32m      4\u001b[39m     d = df.copy()\n\u001b[32m      5\u001b[39m     \u001b[38;5;66;03m# 정렬\u001b[39;00m\n",
+      "\u001b[31mNameError\u001b[39m: name 'st' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# ---- AARRR helper: 이전/현재 플랜, 코호트, 월별 사용자 수/매출 ----\n",
+    "@st.cache_data(show_spinner=False)\n",
+    "def build_aarr_data(df: pd.DataFrame):\n",
+    "    d = df.copy()\n",
+    "    # 정렬\n",
+    "    d[\"month_key\"] = d[\"month\"].str.replace(\"-\", \"\").astype(int)\n",
+    "    d = d.sort_values([\"userid\", \"month_key\"])\n",
+    "\n",
+    "    # 이전/현재 플랜\n",
+    "    d[\"prev_plan\"] = d.groupby(\"userid\")[\"subscription_plan_norm\"].shift(1)\n",
+    "    d[\"curr_plan\"] = d[\"subscription_plan_norm\"]\n",
+    "\n",
+    "    # 전환/유지/이탈 플래그\n",
+    "    d[\"conv_fp\"]   = (d[\"prev_plan\"].str.contains(\"ree\", case=False, na=False)) & (d[\"curr_plan\"].str.contains(\"rem\", case=False, na=False))\n",
+    "    d[\"ret_pp\"]    = (d[\"prev_plan\"].str.contains(\"rem\", case=False, na=False)) & (d[\"curr_plan\"].str.contains(\"rem\", case=False, na=False))\n",
+    "    d[\"churn_pf\"]  = (d[\"prev_plan\"].str.contains(\"rem\", case=False, na=False)) & (d[\"curr_plan\"].str.contains(\"ree\", case=False, na=False))\n",
+    "\n",
+    "    # 월별 분모/분자\n",
+    "    bym = d.groupby(\"month\", as_index=False).agg(\n",
+    "        free_prev   = (\"prev_plan\", lambda s: s.str.contains(\"ree\",  case=False, na=False).sum()),\n",
+    "        prem_prev   = (\"prev_plan\", lambda s: s.str.contains(\"rem\",  case=False, na=False).sum()),\n",
+    "        conv_cnt    = (\"conv_fp\",  \"sum\"),\n",
+    "        ret_cnt     = (\"ret_pp\",   \"sum\"),\n",
+    "        churn_cnt   = (\"churn_pf\", \"sum\"),\n",
+    "        users       = (\"userid\",   pd.Series.nunique),\n",
+    "        revenue_sum = (\"revenue_num\", \"sum\"),\n",
+    "    )\n",
+    "    # 비율\n",
+    "    bym[\"conv_rate\"]  = (bym[\"conv_cnt\"]  / bym[\"free_prev\"]).replace([np.inf, np.nan], 0.0)\n",
+    "    bym[\"ret_rate\"]   = (bym[\"ret_cnt\"]   / bym[\"prem_prev\"]).replace([np.inf, np.nan], 0.0)\n",
+    "    bym[\"churn_rate\"] = (bym[\"churn_cnt\"] / bym[\"prem_prev\"]).replace([np.inf, np.nan], 0.0)\n",
+    "    bym[\"arpu\"]       = bym[\"revenue_sum\"] / bym[\"users\"]\n",
+    "\n",
+    "    # 코호트: 첫 등장 월\n",
+    "    first_month = d.groupby(\"userid\", as_index=False)[\"month\"].min().rename(columns={\"month\": \"first_month\"})\n",
+    "    d = d.merge(first_month, on=\"userid\", how=\"left\")\n",
+    "    d[\"cohort_age\"] = pd.Categorical(d[\"month\"]).codes - pd.Categorical(d[\"first_month\"]).codes  # 0,1,2,...\n",
+    "\n",
+    "    # 코호트 피벗 (유지율: 해당 코호트 첫달 사용자 대비 해당 월 활성이 있는 비율)\n",
+    "    base = d.groupby(\"first_month\")[\"userid\"].nunique().rename(\"cohort_size\")\n",
+    "    active = d.groupby([\"first_month\",\"cohort_age\"])[\"userid\"].nunique().rename(\"active_users\").reset_index()\n",
+    "    coh = active.merge(base, on=\"first_month\", how=\"left\")\n",
+    "    coh[\"retention\"] = (coh[\"active_users\"] / coh[\"cohort_size\"]).fillna(0.0)\n",
+    "    coh_pivot = coh.pivot(index=\"first_month\", columns=\"cohort_age\", values=\"retention\").fillna(0.0)\n",
+    "\n",
+    "    return d, bym.sort_values(\"month\"), coh_pivot\n",
+    "\n",
+    "wide, monthly, cohort = build_aarr_data(df)\n"
+   ]
   }
  ],
  "metadata": {
