--- a/spotify_cleaned.ipynb
+++ b/spotify_cleaned.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 45,
    "id": "5074cbcb",
    "metadata": {},
    "outputs": [
@@ -10,16 +10,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-10-25 22:04:14.384 WARNING streamlit.runtime.caching.cache_data_api: No runtime found, using MemoryCacheStorageManager\n",
-      "2025-10-25 22:04:14.385 WARNING streamlit.runtime.caching.cache_data_api: No runtime found, using MemoryCacheStorageManager\n",
-      "2025-10-25 22:04:14.400 WARNING streamlit.runtime.scriptrunner_utils.script_run_context: Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-10-25 22:04:14.465 \n",
-      "  \u001b[33m\u001b[1mWarning:\u001b[0m to view this Streamlit app on a browser, run it with the following\n",
-      "  command:\n",
-      "\n",
-      "    streamlit run /Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages/ipykernel_launcher.py [ARGUMENTS]\n",
-      "2025-10-25 22:04:14.466 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-10-25 22:04:14.466 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n"
+      "2025-10-25 23:13:50.319 No runtime found, using MemoryCacheStorageManager\n",
+      "2025-10-25 23:13:50.333 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-10-25 23:13:50.334 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-10-25 23:13:50.334 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n"
      ]
     },
     {
@@ -28,7 +22,7 @@
        "DeltaGenerator()"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 46,
    "id": "e65b59b1",
    "metadata": {},
    "outputs": [],
@@ -117,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "7957614d",
    "metadata": {},
    "outputs": [],
@@ -128,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 48,
    "id": "20752129",
    "metadata": {},
    "outputs": [],
@@ -139,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 49,
    "id": "3e537f4a",
    "metadata": {},
    "outputs": [
@@ -164,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 50,
    "id": "254379a0",
    "metadata": {},
    "outputs": [
@@ -190,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 51,
    "id": "f0c6aa3b",
    "metadata": {},
    "outputs": [],
@@ -204,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 52,
    "id": "7aad5617",
    "metadata": {},
    "outputs": [],
@@ -215,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 53,
    "id": "cc5079e6",
    "metadata": {},
    "outputs": [],
@@ -227,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 54,
    "id": "3e7da012",
    "metadata": {},
    "outputs": [],
@@ -242,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 55,
    "id": "0afd474d",
    "metadata": {},
    "outputs": [],
@@ -260,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 56,
    "id": "f7a09394",
    "metadata": {},
    "outputs": [],
@@ -272,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 57,
    "id": "b55cb535",
    "metadata": {},
    "outputs": [],
@@ -291,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 58,
    "id": "a6bfdcbf",
    "metadata": {},
    "outputs": [
@@ -550,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 59,
    "id": "fc43a2bc",
    "metadata": {},
    "outputs": [],
@@ -569,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 60,
    "id": "9243ba90",
    "metadata": {},
    "outputs": [],
@@ -580,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 61,
    "id": "90bfea59",
    "metadata": {},
    "outputs": [],
@@ -607,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 62,
    "id": "98a8ab27",
    "metadata": {},
    "outputs": [
@@ -1007,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 63,
    "id": "35ba3ef6",
    "metadata": {},
    "outputs": [],
@@ -1022,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 64,
    "id": "6cedf9ba",
    "metadata": {},
    "outputs": [],
@@ -1046,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 65,
    "id": "2e146464",
    "metadata": {},
    "outputs": [],
@@ -1068,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 66,
    "id": "0b7e887e",
    "metadata": {},
    "outputs": [
@@ -1108,13 +1102,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>premium_sub_willingness</td>\n",
-       "      <td>ANOVA (LTV)</td>\n",
-       "      <td>8.885363e-11</td>\n",
-       "      <td>p&lt;0.05 → LTV 평균 차이가 유의미함</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>premium_sub_willingness</td>\n",
        "      <td>ANOVA (LTV)</td>\n",
@@ -1126,20 +1113,6 @@
        "      <td>preffered_pod_duration</td>\n",
        "      <td>ANOVA (LTV)</td>\n",
        "      <td>1.263550e-08</td>\n",
-       "      <td>p&lt;0.05 → LTV 평균 차이가 유의미함</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>preffered_pod_duration</td>\n",
-       "      <td>ANOVA (LTV)</td>\n",
-       "      <td>1.263550e-08</td>\n",
-       "      <td>p&lt;0.05 → LTV 평균 차이가 유의미함</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>preffered_premium_plan</td>\n",
-       "      <td>ANOVA (LTV)</td>\n",
-       "      <td>2.399703e-08</td>\n",
        "      <td>p&lt;0.05 → LTV 평균 차이가 유의미함</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1157,13 +1130,6 @@
        "      <td>p&lt;0.05 → 전환율 차이가 유의미함</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>music_recc_rating</td>\n",
-       "      <td>ANOVA (LTV)</td>\n",
-       "      <td>4.128908e-05</td>\n",
-       "      <td>p&lt;0.05 → LTV 평균 차이가 유의미함</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>music_recc_rating</td>\n",
        "      <td>ANOVA (LTV)</td>\n",
@@ -1177,34 +1143,62 @@
        "      <td>1.188697e-04</td>\n",
        "      <td>p&lt;0.05 → 전환율 차이가 유의미함</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>preferred_listening_content</td>\n",
+       "      <td>ANOVA (LTV)</td>\n",
+       "      <td>2.742748e-04</td>\n",
+       "      <td>p&lt;0.05 → LTV 평균 차이가 유의미함</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>pod_host_preference</td>\n",
+       "      <td>ANOVA (LTV)</td>\n",
+       "      <td>5.180075e-03</td>\n",
+       "      <td>p&lt;0.05 → LTV 평균 차이가 유의미함</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>music_time_slot</td>\n",
+       "      <td>ANOVA (LTV)</td>\n",
+       "      <td>1.047667e-02</td>\n",
+       "      <td>p&lt;0.05 → LTV 평균 차이가 유의미함</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>pod_lis_frequency</td>\n",
+       "      <td>ANOVA (LTV)</td>\n",
+       "      <td>2.212103e-02</td>\n",
+       "      <td>p&lt;0.05 → LTV 평균 차이가 유의미함</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                    feature          test_type       p_value  \\\n",
-       "25  premium_sub_willingness        ANOVA (LTV)  8.885363e-11   \n",
-       "15  premium_sub_willingness        ANOVA (LTV)  8.885363e-11   \n",
-       "23   preffered_pod_duration        ANOVA (LTV)  1.263550e-08   \n",
-       "33   preffered_pod_duration        ANOVA (LTV)  1.263550e-08   \n",
-       "26   preffered_premium_plan        ANOVA (LTV)  2.399703e-08   \n",
-       "16   preffered_premium_plan        ANOVA (LTV)  2.399703e-08   \n",
-       "0   premium_sub_willingness  chi2 (conversion)  6.093860e-07   \n",
-       "29        music_recc_rating        ANOVA (LTV)  4.128908e-05   \n",
-       "19        music_recc_rating        ANOVA (LTV)  4.128908e-05   \n",
-       "1    preffered_premium_plan  chi2 (conversion)  1.188697e-04   \n",
+       "                        feature          test_type       p_value  \\\n",
+       "15      premium_sub_willingness        ANOVA (LTV)  8.885363e-11   \n",
+       "23       preffered_pod_duration        ANOVA (LTV)  1.263550e-08   \n",
+       "16       preffered_premium_plan        ANOVA (LTV)  2.399703e-08   \n",
+       "0       premium_sub_willingness  chi2 (conversion)  6.093860e-07   \n",
+       "19            music_recc_rating        ANOVA (LTV)  4.128908e-05   \n",
+       "1        preffered_premium_plan  chi2 (conversion)  1.188697e-04   \n",
+       "17  preferred_listening_content        ANOVA (LTV)  2.742748e-04   \n",
+       "22          pod_host_preference        ANOVA (LTV)  5.180075e-03   \n",
+       "18              music_time_slot        ANOVA (LTV)  1.047667e-02   \n",
+       "20            pod_lis_frequency        ANOVA (LTV)  2.212103e-02   \n",
        "\n",
        "                        note  \n",
-       "25  p<0.05 → LTV 평균 차이가 유의미함  \n",
        "15  p<0.05 → LTV 평균 차이가 유의미함  \n",
        "23  p<0.05 → LTV 평균 차이가 유의미함  \n",
-       "33  p<0.05 → LTV 평균 차이가 유의미함  \n",
-       "26  p<0.05 → LTV 평균 차이가 유의미함  \n",
        "16  p<0.05 → LTV 평균 차이가 유의미함  \n",
        "0      p<0.05 → 전환율 차이가 유의미함  \n",
-       "29  p<0.05 → LTV 평균 차이가 유의미함  \n",
        "19  p<0.05 → LTV 평균 차이가 유의미함  \n",
-       "1      p<0.05 → 전환율 차이가 유의미함  "
+       "1      p<0.05 → 전환율 차이가 유의미함  \n",
+       "17  p<0.05 → LTV 평균 차이가 유의미함  \n",
+       "22  p<0.05 → LTV 평균 차이가 유의미함  \n",
+       "18  p<0.05 → LTV 평균 차이가 유의미함  \n",
+       "20  p<0.05 → LTV 평균 차이가 유의미함  "
       ]
      },
      "metadata": {},
@@ -1231,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 67,
    "id": "07c71fba",
    "metadata": {},
    "outputs": [
@@ -1728,13 +1722,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>premium_sub_willingness</td>\n",
-       "      <td>ANOVA (LTV)</td>\n",
-       "      <td>8.885363e-11</td>\n",
-       "      <td>p&lt;0.05 → LTV 평균 차이가 유의미함</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>premium_sub_willingness</td>\n",
        "      <td>ANOVA (LTV)</td>\n",
@@ -1749,17 +1736,24 @@
        "      <td>p&lt;0.05 → LTV 평균 차이가 유의미함</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>preffered_pod_duration</td>\n",
-       "      <td>ANOVA (LTV)</td>\n",
-       "      <td>1.263550e-08</td>\n",
-       "      <td>p&lt;0.05 → LTV 평균 차이가 유의미함</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
+       "      <th>16</th>\n",
        "      <td>preffered_premium_plan</td>\n",
        "      <td>ANOVA (LTV)</td>\n",
        "      <td>2.399703e-08</td>\n",
+       "      <td>p&lt;0.05 → LTV 평균 차이가 유의미함</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>premium_sub_willingness</td>\n",
+       "      <td>chi2 (conversion)</td>\n",
+       "      <td>6.093860e-07</td>\n",
+       "      <td>p&lt;0.05 → 전환율 차이가 유의미함</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>music_recc_rating</td>\n",
+       "      <td>ANOVA (LTV)</td>\n",
+       "      <td>4.128908e-05</td>\n",
        "      <td>p&lt;0.05 → LTV 평균 차이가 유의미함</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1767,19 +1761,19 @@
        "</div>"
       ],
       "text/plain": [
-       "                    feature    test_type       p_value  \\\n",
-       "25  premium_sub_willingness  ANOVA (LTV)  8.885363e-11   \n",
-       "15  premium_sub_willingness  ANOVA (LTV)  8.885363e-11   \n",
-       "23   preffered_pod_duration  ANOVA (LTV)  1.263550e-08   \n",
-       "33   preffered_pod_duration  ANOVA (LTV)  1.263550e-08   \n",
-       "26   preffered_premium_plan  ANOVA (LTV)  2.399703e-08   \n",
+       "                    feature          test_type       p_value  \\\n",
+       "15  premium_sub_willingness        ANOVA (LTV)  8.885363e-11   \n",
+       "23   preffered_pod_duration        ANOVA (LTV)  1.263550e-08   \n",
+       "16   preffered_premium_plan        ANOVA (LTV)  2.399703e-08   \n",
+       "0   premium_sub_willingness  chi2 (conversion)  6.093860e-07   \n",
+       "19        music_recc_rating        ANOVA (LTV)  4.128908e-05   \n",
        "\n",
        "                        note  \n",
-       "25  p<0.05 → LTV 평균 차이가 유의미함  \n",
        "15  p<0.05 → LTV 평균 차이가 유의미함  \n",
        "23  p<0.05 → LTV 평균 차이가 유의미함  \n",
-       "33  p<0.05 → LTV 평균 차이가 유의미함  \n",
-       "26  p<0.05 → LTV 평균 차이가 유의미함  "
+       "16  p<0.05 → LTV 평균 차이가 유의미함  \n",
+       "0      p<0.05 → 전환율 차이가 유의미함  \n",
+       "19  p<0.05 → LTV 평균 차이가 유의미함  "
       ]
      },
      "metadata": {},
@@ -1818,7 +1812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 71,
    "id": "1341c848",
    "metadata": {},
    "outputs": [
@@ -1852,13 +1846,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "📁 저장: out_feature_importance_revenue.csv\n"
-     ]
     }
    ],
    "source": [
@@ -1914,15 +1901,12 @@
     "r2_test  = rf_revenue.score(X_test,  y_test)\n",
     "\n",
     "print(f\"✅ Revenue RF 학습 완료 | R² train={r2_train:.3f}, test={r2_test:.3f}\")\n",
-    "display(imp_revenue.head(15))\n",
-    "\n",
-    "imp_revenue.to_frame(\"importance\").to_csv(\"out_feature_importance_revenue.csv\")\n",
-    "print(\"📁 저장: out_feature_importance_revenue.csv\")"
+    "display(imp_revenue.head(15))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 72,
    "id": "3c68458c",
    "metadata": {},
    "outputs": [
@@ -1956,13 +1940,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "📁 저장: out_feature_importance_ltv.csv\n"
-     ]
     }
    ],
    "source": [
@@ -2009,16 +1986,57 @@
     "r2_test2  = rf_ltv.score(X2_test,  y2_test)\n",
     "\n",
     "print(f\"✅ LTV RF 학습 완료 | R² train={r2_train2:.3f}, test={r2_test2:.3f}\")\n",
-    "display(imp_ltv.head(15))\n",
+    "display(imp_ltv.head(15))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "302c84c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Export 완료 → /data 폴더:\n",
+      "- out_revenue_kpis.csv\n",
+      "- out_premium_retention_monthly.csv\n",
+      "- out_arpu_monthly.csv\n",
+      "- out_pref_group_summary.csv\n",
+      "- out_pref_significance_tests.csv\n",
+      "- out_feature_importance_ltv.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "out_dir = \"data\"   # 앱에서 찾는 폴더\n",
+    "os.makedirs(out_dir, exist_ok=True)\n",
     "\n",
-    "imp_ltv.to_frame(\"importance\").to_csv(\"out_feature_importance_ltv.csv\")\n",
-    "print(\"📁 저장: out_feature_importance_ltv.csv\")"
+    "# 이미 계산된 변수들: kpi, ret_df, arpu_monthly, summary_pref, tests_df, imp_ltv\n",
+    "kpi.to_csv(f\"{out_dir}/out_revenue_kpis.csv\", index=False)\n",
+    "ret_df.to_csv(f\"{out_dir}/out_premium_retention_monthly.csv\", index=False)\n",
+    "arpu_monthly.to_csv(f\"{out_dir}/out_arpu_monthly.csv\", index=False)\n",
+    "\n",
+    "# (이미 있는 것들도 같은 폴더로 저장해두면 깔끔)\n",
+    "summary_pref.to_csv(f\"{out_dir}/out_pref_group_summary.csv\", index=False)\n",
+    "tests_df.to_csv(f\"{out_dir}/out_pref_significance_tests.csv\", index=False)\n",
+    "imp_ltv.to_csv(f\"{out_dir}/out_feature_importance_ltv.csv\", index=False)\n",
+    "\n",
+    "print(\"✅ Export 완료 → /data 폴더:\")\n",
+    "print(\"- out_revenue_kpis.csv\")\n",
+    "print(\"- out_premium_retention_monthly.csv\")\n",
+    "print(\"- out_arpu_monthly.csv\")\n",
+    "print(\"- out_pref_group_summary.csv\")\n",
+    "print(\"- out_pref_significance_tests.csv\")\n",
+    "print(\"- out_feature_importance_ltv.csv\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "302c84c4",
+   "id": "94194b97",
    "metadata": {},
    "outputs": [],
    "source": []
